RESOLVED FIXED157821
REGRESSION(r200959): "Start Timeline Recording" menu item doesn't start recording
https://bugs.webkit.org/show_bug.cgi?id=157821
Summary REGRESSION(r200959): "Start Timeline Recording" menu item doesn't start recor...
Blaze Burg
Reported 2016-05-17 16:56:49 PDT
:(
Attachments
Proposed Fix (4.74 KB, patch)
2016-05-17 23:13 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2016-05-17 16:57:15 PDT
Radar WebKit Bug Importer
Comment 2 2016-05-17 16:58:47 PDT
Radar WebKit Bug Importer
Comment 3 2016-05-17 16:58:53 PDT
Blaze Burg
Comment 4 2016-05-17 23:13:20 PDT
Created attachment 279217 [details] Proposed Fix
WebKit Commit Bot
Comment 5 2016-05-18 07:51:21 PDT
Comment on attachment 279217 [details] Proposed Fix Clearing flags on attachment: 279217 Committed r201079: <http://trac.webkit.org/changeset/201079>
WebKit Commit Bot
Comment 6 2016-05-18 07:51:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.